<!--
  ~ ioGo - android app to control ioBroker home automation server.
  ~
  ~ Copyright (C) 2018  Nis Nagel
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name" translatable="false">iogo</string>

    <string name="menu_action_info">Info</string>
    <string name="menu_action_settings">Settings</string>

    <!-- main activity -->
    <string name="main_title_activity_home">Home</string>
    <string name="main_title_activity_room_list">Rooms</string>
    <string name="main_title_activity_function_list">Functions</string>
    <string name="main_w_e_l_c_o_m_e">W E L C O M E</string>
    <string name="main_thank_you_for_using_this_app">Thank you for using this app!</string>
    <string name="main_get_registered_now">Get registered now</string>
    <string name="main_connect_to_your_iobroker">Connect to your ioBroker</string>
    <string name="main_star">Star</string>
    <string name="main_hide">Hide</string>
    <string name="main_value_open">open</string>
    <string name="main_value_closed">closed</string>
    <string name="main_value_tilted">tilted</string>
    <string name="main_loading_date">loading</string>
    <string name="main_syncing_data">syncing data&#8230;</string>
    <string name="main_unstarred">unstarred</string>
    <string name="main_starred">starred</string>
    <string name="main_new_value">New Value :</string>
    <string name="main_home">Home</string>
    <string name="main_click">click</string>

    <!-- info activity -->
    <string name="info_title_activity_info">Information</string>
    <string name="info_count_states">Number of states:</string>
    <string name="info_count_funktions">Number of functions:</string>
    <string name="info_count_rooms">Number of rooms:</string>
    <string name="info_connect_status">Status:</string>
    <string name="info_app_version">App Version:</string>
    <string name="info_account_state">Status:</string>
    <string name="info_account_lbl">Account:</string>
    <string name="info_connect_lbl">Server:</string>
    <string name="info_database_lbl">Database:</string>
    <string name="info_app_lbl">App:</string>
    <string name="info_account_state_unknown">unknown</string>
    <string name="info_account_state_anonymous">anonymous logged in</string>
    <string name="info_account_state_logged_in">logged in</string>
    <string name="info_account_state_not_verified">email not verified</string>
    <string name="info_sync_objects">Sync Objects/Enums</string>

    <!-- statistics activity -->
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="today">Today</string>
    <string name="statistics">Statistics</string>

    <!-- account activity -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- settings activity -->
    <string name="settings_title_activity_settings">Settings</string>
    <string name="settings_title_activity_settings_server">Settings - Server</string>
    <string name="settings_title_activity_settings_design">Settings - Design</string>
    <string name="settings_title_activity_settings_error">Settings - Error</string>
    <string name="settings_title_activity_settings_device">Settings - Device</string>
    <string name="settings_title_activity_settings_account">Settings - Account</string>
    <string name="settings_account_title">Account</string>
    <string name="settings_server_title">Server</string>
    <string name="settings_server_layout">Layout</string>
    <string name="settings_server_device">Device</string>
    <string name="settings_server_error">Troubleshooting</string>
    <string name="settings_server_account_desc">User authentication</string>
    <string name="settings_server_server_desc">Connect to your server</string>
    <string name="settings_server_layout_desc">Adjust look and feel</string>
    <string name="settings_server_device_desc">Enable device features</string>
    <string name="settings_server_error_desc">What to do with bugs</string>
    <string name="settings_connect_iogo_summary">app account needed</string>
    <string name="settings_connect_iogo_title">Use iogo adapter</string>
    <string name="settings_connect_cloud_summary">only cloud.pro</string>
    <string name="settings_connect_cloud_title">Use cloud adapter</string>
    <string name="settings_connect_cloud_user_title">Username</string>
    <string name="settings_connect_cloud_user_summary">Username is: %s</string>
    <string name="settings_connect_cloud_password_title">Password</string>
    <string name="settings_connect_web_summary">only with integrated socket-io</string>
    <string name="settings_connect_web_title">Use web adapter</string>
    <string name="settings_connect_web_url_message">Please enter url and port from your web-adapter</string>
    <string name="settings_connect_web_url_title">Socket URL</string>
    <string name="settings_connect_web_url_summary">URL is: %s</string>
    <string name="settings_connect_web_user_title">Username (Optional)</string>
    <string name="settings_connect_web_user_summary">Username is: %s</string>
    <string name="settings_connect_web_password_title">Password (Optional)</string>
    <string name="settings_layout_state_sutitle_title">Subtitle</string>
    <string name="settings_layout_state_subtitle_summary">%s is shown as subtitle</string>
    <string name="settings_layout_enum_hidden_title">Show hidden enum</string>
    <string name="settings_device_name_title">Devicename</string>
    <string name="settings_device_name_summary">Current device is: %s</string>
    <string name="settings_device_features_summary">app account needed</string>
    <string name="settings_device_features_title">Device features</string>
    <string name="settings_device_notification_title">Receive notifications</string>
    <string name="settings_error_logging_summary">logging into filesystem at storage/de.nisnagel.iogo/logs</string>
    <string name="settings_error_logging_title">Enable logging</string>
    <string name="settings_error_logging_level_title">Choose logging level</string>
    <string name="settings_error_logging_level_summary">Logging level is set to: %s</string>

    <!-- preferences -->
    <string name="pref_connect_iogo" translatable="false">pref_connect_iogo</string>
    <string name="pref_connect_cloud" translatable="false">pref_connect_cloud</string>
    <string name="pref_connect_cloud_user" translatable="false">pref_connect_cloud_user</string>
    <string name="pref_connect_cloud_password" translatable="false">pref_connect_cloud_password</string>
    <string name="pref_connect_web" translatable="false">pref_connect_web</string>
    <string name="pref_connect_web_url" translatable="false">pref_connect_web_url</string>
    <string name="pref_connect_web_user" translatable="false">pref_connect_web_user</string>
    <string name="pref_connect_web_password" translatable="false">pref_connect_web_password</string>

    <string name="pref_error_logging" translatable="false">pref_error_logging</string>
    <string name="pref_error_logging_level" translatable="false">pref_error_logging_level</string>

    <string name="pref_device_name" translatable="false">pref_device_name</string>
    <string name="pref_device_notification" translatable="false">pref_device_notification</string>

    <string name="pref_layout_object_sync" translatable="false">pref_layout_object_sync</string>
    <string name="pref_layout_state_subtitle" translatable="false">pref_layout_state_subtitle</string>
    <string name="pref_layout_enum_show_hidden" translatable="false">pref_layout_hidden_enum</string>


    <string name="error_no_skus">We didn\'t find any SKUs to display&#8230; Check your internet
        connection and make sure your Google Developer Console was setup correctly.</string>
    <string name="error_billing_unavailable">Billing unavailable. Make sure your Google Play app
        is setup correctly</string>
    <string name="error_billing_default">Billing unavailable. Please check your device.</string>
    <string name="error_appsgit_not_finished">TODO: Here you will need to perform the
        integration with Play Store to study the New way of integration with Play Billing.
    </string>

    <string name="button_purchase">Purchase Items</string>
    <string name="button_buy">Buy</string>

    <string name="content_description_app_loading_image">App loading image</string>
    <string name="content_desc_free_vs_premium_indicator">Free or Premium Image Indicator</string>

</resources>
