<?xml version="1.0" encoding="utf-8"?><!--
  ~ ioGo - android app to control ioBroker home automation server.
  ~
  ~ Copyright (C) 2018  Nis Nagel
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/preference_category_summary"
        android:summary="@string/settings_connect_iogo_summary"
        android:title="ioBroker.iogo">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_connect_iogo"
            android:title="@string/settings_connect_iogo_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category_summary"
        android:summary="@string/settings_connect_cloud_summary"
        android:title="ioBroker.cloud">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_connect_cloud"
            android:title="@string/settings_connect_cloud_title" />
        <EditTextPreference
            android:editable="true"
            android:inputType="textEmailAddress"
            android:key="@string/pref_connect_cloud_user"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_connect_cloud_user_title" />
        <EditTextPreference
            android:inputType="textPassword"
            android:key="@string/pref_connect_cloud_password"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_connect_cloud_password_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category_summary"
        android:summary="@string/settings_connect_web_summary"
        android:title="ioBroker.web">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_connect_web"
            android:title="@string/settings_connect_web_title" />
        <EditTextPreference
            android:dialogMessage="@string/settings_connect_web_url_message"
            android:key="@string/pref_connect_web_url"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_connect_web_url_title" />
        <EditTextPreference
            android:editable="true"
            android:inputType="text"
            android:key="@string/pref_connect_web_user"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_connect_web_user_title" />
        <EditTextPreference
            android:inputType="textPassword"
            android:key="@string/pref_connect_web_password"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_connect_web_password_title" />
    </PreferenceCategory>
</PreferenceScreen>